# night-bazaar

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml
client/: build.ts  index.html  package.json  tsconfig.json
client/scripts/: keeper-booth-paytest.ts  keeper-carve.ts  keeper-debug-pay.ts  keeper-debug-pay2.ts  keeper-paytest.ts  live-money.ts  session-hold.ts
client/src/: alien.ts  alienparams.ts  audio.ts  booths.ts  charge01.ts  chatview.ts  fakecrowd.ts  hud.ts  main.ts  net.ts  payer.ts  scenery.ts  seeded.ts  textures.ts  wallet.ts  webgpu-shim.ts  world3d.ts
client/test/: alien.test.ts  charge01.test.ts  chatview.test.ts  fund-durability.test.ts  protocol.test.ts  wallet.test.ts
docs/: fly-deploy.md
fetch-with-pop/: LICENSE  README.md  package.json  tsconfig.json
fetch-with-pop/src/: envelope.ts  fetch-with-pop.ts  index.test.ts  index.ts  mpp.ts  testing.ts  wallet.ts
protocol/: protocol.ts
protocol/fixtures/: messages.json
protocol/vectors/: charge01-vectors.json
server/: Cargo.toml  build-image.sh
server/src/: booth.rs  config.rs  game.rs  gates.rs  lib.rs  main.rs  mint.rs  multiunit.rs  protocol.rs  proxy.rs  sink.rs  vault.rs  vectors.rs  world.rs
server/tests/: gate_flow.rs  multiunit_flow.rs  vectors_match.rs
